--- a/waybar/minimal.css
+++ b/waybar/minimal.css
@@ -1,11 +1,37 @@
 * {
 	border: none;
 	border-radius: 0;
-	font-family: Siji;
+	font-family: JetBrains Mono, Siji;
 	font-size: 14;
-	padding: 10px 10px;
+	padding: 0px 8px;
 	margin: 2px;
 	background-color: black;
 	color: white;
 }
 
+#waybar {
+	background-color: transparent;
+}
+
+#workspaces button {
+	background-color: black;
+	color: white;
+	padding: 2px;
+	margin: 2px;
+}
+
+#workspaces button.active {
+    color: #f1c453;
+}
+
+#workspaces button.focused {
+    background-color: #a6adc8;
+}
+
+#workspaces button.urgent {
+    background-color: #eba0ac;
+}
+
+#workspaces button:hover {
+    background-color: #cdd6f4;
+}
