--- a/waybar/gruvbox.css
+++ b/waybar/gruvbox.css
@@ -1,146 +1,291 @@
+/* https://github.com/Axenide/Dotfiles */
+/* @import "gruvbox.css"; */
+@define-color black	    #282828;
+@define-color red	      #cc241d;
+@define-color green	    #98971a;
+@define-color yellow	  #d79921;
+@define-color blue	    #458588;
+@define-color purple	  #b16286;
+@define-color aqua    	#689d6a;
+@define-color gray    	#a89984;
+@define-color brgray	  #928374;
+@define-color brred   	#fb4934;
+@define-color brgreen	  #b8bb26;
+@define-color bryellow	#fabd2f;
+@define-color brblue	  #83a598;
+@define-color brpurple	#d3869b;
+@define-color braqua  	#8ec07c;
+@define-color white	    #ebdbb2;
+@define-color bg2	      #504945;
 
 * {
     border: none;
-    border-radius: 0;
-    font-family: Cartograph CF Nerd Font, monospace;
-    font-weight: bold;
+    border-radius: 0px;
+    font-family: JetBrains Mono;
+    /* font-family: Iosevka, Noto Sans Mono; */
     font-size: 14px;
+    font-style: normal;
     min-height: 0;
 }
 
 window#waybar {
-    background: rgba(21, 18, 27, 0);
-    color: #cdd6f4;
-}
-
-tooltip {
-    background: #1e1e2e;
-    border-radius: 10px;
-    border-width: 2px;
-    border-style: solid;
-    border-color: #11111b;
-}
-
-#workspaces button {
-    padding: 5px;
-    color: #313244;
-    margin-right: 5px;
-}
-
-#workspaces button.active {
-    color: #a6adc8;
-}
-
-#workspaces button.focused {
-    color: #a6adc8;
-    background: #eba0ac;
-    border-radius: 10px;
-}
-
-#workspaces button.urgent {
-    color: #11111b;
-    background: #a6e3a1;
-    border-radius: 10px;
-}
-
-#workspaces button:hover {
-    background: #11111b;
-    color: #cdd6f4;
-    border-radius: 10px;
-}
-
-#custom-language,
-#custom-updates,
-#custom-caffeine,
-#custom-weather,
-#window,
-#clock,
-#battery,
-#pulseaudio,
-#network,
-#workspaces,
-#tray,
-#backlight {
-    background: #1e1e2e;
-    padding: 0px 10px;
-    margin: 3px 0px;
-    margin-top: 10px;
-    border: 1px solid #181825;
-}
-
-#tray {
-    border-radius: 10px;
-    margin-right: 10px;
+    background: rgba(0, 0, 0, 0);
+    border-bottom: 0px solid #000000;
+    color: @white
 }
 
 #workspaces {
-    background: #1e1e2e;
-    border-radius: 10px;
-    margin-left: 10px;
-    padding-right: 0px;
-    padding-left: 5px;
+	background: black;
+	margin: 5px 5px 5px 5px;
+  padding: 0px 5px 0px 5px;
+	border-radius: 16px;
+  border: solid 0px @white;
+  font-weight: normal;
+  font-style: normal;
+}
+#workspaces button {
+    padding: 0px 5px;
+    border-radius: 16px;
+    color: #928374;
+    /* color: black; */
+    background-color: black;
+    text-shadow: 0px 0px 3px rgba(0,0,0,1);
 }
 
-#custom-caffeine {
-    color: #89dceb;
-    border-radius: 10px 0px 0px 10px;
-    border-right: 0px;
-    margin-left: 10px;
+#workspaces button.active {
+    color: @white;
+    border-radius: 16px;
 }
 
-#custom-language {
-    color: #f38ba8;
-    border-left: 0px;
-    border-right: 0px;
+#workspaces button:hover {
+	color: @brgreen;
 }
 
-#custom-updates {
-    color: #f5c2e7;
-    border-left: 0px;
-    border-right: 0px;
-    border-radius: 10px 0px 0px 10px;;
+#custom-date, #clock, #battery, #pulseaudio, #network, #custom-randwall, #custom-launcher {
+	background: black;
+	padding: 5px 5px 5px 5px;
+	margin: 5px 5px 5px 5px;
+  border-radius: 8px;
+  border: solid 0px @white;
 }
 
-#window {
-    border-radius: 10px;
-    margin-left: 60px;
-    margin-right: 60px;
+#custom-date {
+	color: #D3869B;
+}
+
+#custom-power {
+	color: #24283b;
+	background-color: #db4b4b;
+	border-radius: 5px;
+	margin-right: 10px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	margin-left: 0px;
+	padding: 5px 10px;
+}
+
+#tray {
+    background: #000000;
+    margin: 5px 5px 5px 5px;
+    border-radius: 16px;
+    padding: 0px 5px;
+    /*border-right: solid 1px #1D1D1D;*/
+    border: solid 1px @black;
+    box-shadow: 0px 0px 3px rgba(0,0,0,1);
 }
 
 #clock {
-    color: #fab387;
-    border-radius: 10px 0px 0px 10px;
-    margin-left: 5px;
-    border-right: 0px;
+    color: @brgreen;
+    background-color: #000000;
+    border-radius: 0px 0px 0px 20px;
+    padding-left: 13px;
+    padding-right: 15px;
+    margin-right: 0px;
+    margin-left: 10px;
+    margin-top: 0px;
+    margin-bottom: 5px;
+    font-weight: bold;
+    /*border-left: solid 1px #1D1D1D;*/
+    border-left: solid 1px @black;
+    border-bottom: solid 1px @black;
+    box-shadow: 0px 0px 3px rgba(0,0,0,1);
+}
+
+
+#battery {
+    color: #9ece6a;
+}
+
+#battery.charging {
+    color: #9ece6a;
+}
+
+#battery.warning:not(.charging) {
+    background-color: #f7768e;
+    color: #24283b;
+    border-radius: 5px 5px 5px 5px;
+}
+
+#backlight {
+    background-color: #24283b;
+    color: #db4b4b;
+    border-radius: 0px 0px 0px 0px;
+    margin: 5px;
+    margin-left: 0px;
+    margin-right: 0px;
+    padding: 0px 0px;
 }
 
 #network {
-    color: #f9e2af;
-    border-left: 0px;
-    border-right: 0px;
+    color: @white;
+    border-radius: 8px;
+    margin-right: 5px;
+    text-shadow: 0px 0px 3px rgba(0,0,0,1);
+}
+
+#bluetooth {
+    color: @white;
+    border-radius: 8px;
+    margin-left: 10px;
+    margin-right: -5px;
+    text-shadow: 0px 0px 3px rgba(0,0,0,1);
+}
+
+#bluetooth.connected {
+    color: @brgreen;
+    border-radius: 8px;
+}
+
+#bluetooth.off {
+    color: #928374;
+    border-radius: 8px;
 }
 
 #pulseaudio {
-    color: #89b4fa;
-    border-left: 0px;
-    border-right: 0px;
-}
-
-#pulseaudio.microphone {
-    color: #cba6f7;
-    margin-right: 5px;
-    border-radius: 0 10px 10px 0;
-}
-
-#battery {
-    color: #a6e3a1;
-    border-radius: 0 10px 10px 0;
-    margin-right: 10px;
-    border-left: 0px;
-}
-
-#custom-weather {
-    border-radius: 0px 10px 10px 0px;
-    border-right: 0px;
+    color: @white;
+    border-radius: 8px;
     margin-left: 0px;
+    text-shadow: 0px 0px 3px rgba(0,0,0,1);
+}
+
+#pulseaudio.muted {
+    background: transparent;
+    color: #928374;
+    border-radius: 8px;
+    margin-left: 0px;
+}
+
+#custom-randwall {
+    color: @white;
+    border-radius: 8px;
+    margin-right: 0px;
+}
+
+#custom-launcher {
+    color: @red;
+    background-color: #000000;
+    border-radius: 0px 0px 20px 0px;
+    margin: 0px 0px 5px 0px;
+    padding: 0 20px 0 13px;
+    /*border-right: solid 1px #1D1D1D;*/
+    font-size: 18px;
+    border-right: solid 1px @black;
+    border-bottom: solid 1px @black;
+    box-shadow: 0px 0px 3px rgba(0,0,0,1);
+}
+
+#custom-launcher button:hover {
+    background-color: #FB4934;
+    color: transparent;
+    border-radius: 8px;
+    margin-right: -5px;
+    margin-left: 10px;
+}
+
+#custom-playerctl {
+	background: #000000;
+	padding-left: 15px;
+  padding-right: 14px;
+	border-radius: 16px;
+  /*border-left: solid 1px #1D1D1D;*/
+  /*border-right: solid 1px #1D1D1D;*/
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 0px;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 16px;
+  /* Add a shadow to the bakground */
+  /* box-shadow: 0px 1px 1px @white; */
+  border: 1px solid @black;
+  box-shadow: 0px 0px 3px rgba(0,0,0,1);
+}
+
+#custom-playerlabel {
+    background: transparent;
+    padding-left: 10px;
+    padding-right: 15px;
+    border-radius: 16px;
+    /*border-left: solid 1px #1D1D1D;*/
+    /*border-right: solid 1px #1D1D1D;*/
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-weight: bold;
+    font-style: normal;
+    text-shadow: 0px 0px 3px rgba(0,0,0,1);
+}
+
+#window {
+    background: #000000;
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius: 16px;
+    /*border-left: solid 1px #1D1D1D;*/
+    /*border-right: solid 1px #1D1D1D;*/
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-weight: normal;
+    font-style: normal;
+}
+
+#custom-wf-recorder {
+    padding: 0 20px;
+    color: @red;
+    background-color: #000000;
+}
+
+#cpu, #memory, #disk {
+    background-color: #000000;
+    /*color: #8EC07C;*/
+    border-radius: 16px;
+    margin: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+    padding: 0px 10px 0px 10px;
+    font-weight: bold;
+    border: 1px solid @black;
+    box-shadow: 0px 0px 3px rgba(0,0,0,1);
+}
+
+#custom-hyprpicker {
+    background-color: transparent;
+    /*color: #8EC07C;*/
+    border-radius: 16px;
+    margin: 5px;
+    margin-left: 10px;
+    margin-right: 5px;
+    /*padding: 0px 11px 0px 9px;*/
+    font-weight: bold;
+    text-shadow: 0px 0px 3px rgba(0,0,0,1);
+}
+
+#custom-notifications {
+    background-color: transparent;
+    /*color: #8EC07C;*/
+    border-radius: 16px;
+    margin: 5px;
+    margin-left: 5px;
+    margin-right: 10px;
+    font-weight: bold;
+    text-shadow: 0px 0px 3px rgba(0,0,0,1);
 }
