--- a/waybar/style.css
+++ b/waybar/style.css
@@ -8,7 +8,7 @@
 	padding: 0px;
 	font-weight: normal;
 	min-height: 0;
-	background-color: transparent;
+	background-color: black;
 	color: white;
 }
 
